<resources>
    <string name="app_name">BullSheepFood</string>
    <string name="add_item">Add item</string>
    <string name="add_schedule">Add schedule</string>
    <string name="stats">Stats</string>
    <string name="schedule">Schedule</string>
    <string name="scanner">Scanner</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="fragment_add_food_label_name">Name</string>
    <string name="fragment_add_food_proteins_name">Proteins</string>
    <string name="fragment_add_food_fats_name">Fats</string>
    <string name="fragment_add_food_carbs_name">Carbs</string>
    <string name="fragment_add_food_kcal_name">kCal</string>

    <string name="label_submit">Submit</string>

    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="facebook_app_id">414549609277141</string>
    <string name="fb_login_protocol_scheme">fb414549609277141</string>

    <string name="ration">Ration</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="protein_title">Protein -</string>
    <string name="carbs_title">Carbs -</string>
    <string name="fats_title">Fats -</string>
    <string name="calories_title">Calories -</string>
    <string name="or">OR</string>
    <string name="not_implemented_text">Sorry, this feature is not implemented yet!</string>
</resources>
